--- a/.github/workflows/check_hotwheels_email.yml
+++ b/.github/workflows/check_hotwheels_email.yml
@@ -11,9 +11,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1) Checkout the repository
+      # 1) Checkout the repository with full history so we can rebase/push
       - name: "Checkout code"
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       # 2) Set up Python 3.x
       - name: "Set up Python"
@@ -38,17 +40,21 @@ jobs:
         run: |
           python check_hotwheels_email.py
 
-      # 5) Commit any changes to previous.json back to the repo
-      - name: "Commit updated previous.json"
+      # 5) Pull any remote changes, then commit & push updated previous.json
+      - name: "Pull, commit, and push updated previous.json"
         if: ${{ always() }}
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
+
+          # 5.1) Ensure our local clone is up-to-date
+          git pull --rebase origin main
+
           git add previous.json
           # Only commit if previous.json actually changed
           if ! git diff --staged --quiet; then
             git commit -m "chore: update previous.json [ci skip] ($(date -u +"%Y-%m-%dT%H:%M:%SZ"))"
-            git push
+            git push origin HEAD:main
           else
             echo "No changes in previous.json → skipping commit."
           fi
