--- a/.github/workflows/check_hotwheels_email.yml
+++ b/.github/workflows/check_hotwheels_email.yml
@@ -11,11 +11,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1) Checkout the repository with full history so we can rebase/push
+      # 1) Checkout the repository with full history so we can rebase/push, and allow pushing with GITHUB_TOKEN
       - name: "Checkout code"
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          persist-credentials: true
 
       # 2) Set up Python 3.x
       - name: "Set up Python"
@@ -48,13 +49,14 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
           # 5.1) Ensure our local clone is up-to-date
-          git pull --rebase origin main
+          git fetch origin main
+          git rebase origin/main
 
           git add previous.json
           # Only commit if previous.json actually changed
           if ! git diff --staged --quiet; then
             git commit -m "chore: update previous.json [ci skip] ($(date -u +"%Y-%m-%dT%H:%M:%SZ"))"
-            git push origin HEAD:main
+            git push
           else
             echo "No changes in previous.json → skipping commit."
           fi
