--- a/.github/workflows/check_hotwheels_email.yml
+++ b/.github/workflows/check_hotwheels_email.yml
@@ -2,36 +2,37 @@ name: "Check Hot Wheels (Email) Every 3 Hours"
 
 on:
   schedule:
-    # Runs every 3 hours at minute 0 (UTC)
+    # At minute 0 past every 3rd hour (UTC): 0 */3 * * *
     - cron: "0 */3 * * *"
-  workflow_dispatch:  # Allows manual trigger from GitHub UI
+  workflow_dispatch:  # allows manual trigger from GitHub UI
 
 jobs:
   check-hotwheels:
     runs-on: ubuntu-latest
 
     steps:
-      # 1) Checkout the repository with full history
-      - name: "Checkout code"
+      # 1) Checkout the repository
+      - name: Checkout code
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0
-          persist-credentials: true  # Needed to allow pushing
+          persist-credentials: true   # <-- this tells checkout to use GITHUB_TOKEN for pushes
 
-      # 2) Set up Python
+
+      # 2) Set up Python 3.x
       - name: "Set up Python"
         uses: actions/setup-python@v4
         with:
           python-version: "3.11"
 
-      # 3) Install Python dependencies
+      # 3) Install dependencies: Playwright, BeautifulSoup, etc.
       - name: "Install dependencies"
         run: |
           python -m pip install --upgrade pip
           pip install playwright beautifulsoup4
+          # Download Playwright browsers
           playwright install --with-deps
 
-      # 4) Run the checker script
+      # 4) Run our Python script
       - name: "Run Hot Wheels Checker & Email"
         env:
           GMAIL_USER:         ${{ secrets.GMAIL_USER }}
@@ -40,21 +41,17 @@ jobs:
         run: |
           python check_hotwheels_email.py
 
-      # 5) Pull latest main, commit, and push updated previous.json if changed
-      - name: "Pull, commit, and push updated previous.json"
+      # 5) Commit any changes to previous.json back to the repo
+      - name: "Commit updated previous.json"
         if: ${{ always() }}
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-
-          # Fetch latest commits and rebase
-          git fetch origin main
-          git rebase origin/main
-
           git add previous.json
+          # Only commit if previous.json actually changed
           if ! git diff --staged --quiet; then
             git commit -m "chore: update previous.json [ci skip] ($(date -u +"%Y-%m-%dT%H:%M:%SZ"))"
-            git push origin HEAD:main
+            git push
           else
             echo "No changes in previous.json → skipping commit."
           fi
