--- a/.github/workflows/check_hotwheels_email.yml
+++ b/.github/workflows/check_hotwheels_email.yml
@@ -2,9 +2,9 @@ name: "Check Hot Wheels (Email) Every 3 Hours"
 
 on:
   schedule:
-    # At minute 0 past every 3rd hour (UTC): 0 */3 * * *
-    - cron: "0 */3 * * *"
-  workflow_dispatch:  # allows manual trigger from GitHub UI
+    # At minute 0 past every hour (UTC)
+    - cron: "0 * * * *"
+  workflow_dispatch:
 
 jobs:
   check-hotwheels:
